<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"police app "</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">请输入用户名</string>
    <string name="name">用户名</string>
    <string name="please_minicode">请输入密码</string>
    <string name="minicode">密码</string>
    <string name="exit">退出</string>
    <string name="return1">返回</string>
    <string name="login">登录</string>
    <string name="hello_police">警员您好</string>
    <string name="trying_to_get_gis_beidou">正在不断获取您的地理位置…</string>
    <string name="trying_to_get_gis">您的地理位置将发送给后台，请保持网络畅通</string>
    <string name="your_working_status">您的工作状态</string>
    <string name="your_gis">您的地理位置</string>
    <string name="wolking_around">步逻</string>
    <string name="driving_around">车逻</string>
    <string name="once_inform">接到警情，会立刻通知您</string>
    <string name="layer_out">注销</string>
    <string name="identity">确认</string>
    <string name="have_been_helping">您已进入接警状态</string>
    <string name="please_go_hurry">请尽快出警!</string>
    <string name="guilding">导航</string>
    <string name="StrLon">经度</string>
    <string name="StrLat">纬度</string>
    <string name="theWhole_thingOf_police">报警详情</string>
    <string name="rememberkeys">记住密码</string>
    <string name="ready">准备出警</string>
</resources>
